# solaceos

./: .bochsrc  .clang-format  .clangd  .gitignore  .gitmodules  Makefile  build.py  compile_commands.json  generate_compile_commands  meson.build  run  setup  solace  x86_64-elf.ini
gdb/: gdb-cmd  k.gdb  krn.gdb  ldr.gdb
include/: atomic.h  common.h  compiler.h  console.h  datetime.h  elf.h  endian.h  errno.h  font.h  kprint.h  mb1.h  mem.h  memblock.h  page.h  panic.h  print.h  range.h  sort.h  spinlock.h  stack.h  string.h  types.h  util.h  vga.h  vmm.h
include/arch/x86_64/: io.h  page.h
include/ds/: list.h
include/fs/: vnode.h
include/fs/ext2/: disk.h  ext2fs.h
include/ldr/: boot.h  fail.h
include/loader/: boot.h  mmap.h  paging.h
include/mm/: memblock.h  palloc.h  vm.h
py/: build-bios.py
src/: common.h  console.c  k.ld  kmain.c  kprint.c  limine.h  main.c  mem.c  mem.h  memblock.c  palloc.c  panic.c  print.c  print.h  psf.c  psf.h  sort.c  string.c  vcon.c  vcon.h  vga.c
src/arch/: fence.h
src/arch/x86_64/: atomic.c  console.c  elf.c  endian.c  fence.c  io.c  kern.ld  krn.ld  page.c  paging.c  spinlock.c  start.S
src/arch/x86_64/boot/: boot.S  boot.ld  div.c  kprint.c  loader.c
src/arch/x86_64/ldr/: ldr.S
src/boot/i386/: boot.S  boot.ld
src/ldr/: fail.c  kprint.c  ldr.c  loader.c  memblock.c  mmap.c
src/limine/: limine.conf  limine.h
src/mm/: memblock.c  palloc.c
src/qemu/: grub.cfg  img.sh  mkimg
subprojects/: .gitignore  limine.wrap  mtools.wrap
subprojects/packagefiles/limine/: limine.py  meson.build
subprojects/packagefiles/mtools/: meson.build  mtools.py
